--- a/app/views/layouts/admin.jade
+++ b/app/views/layouts/admin.jade
@@ -16,32 +16,27 @@ html
         link(type='text/css', href='/assets/css/menu_light.css', rel='stylesheet')
         link(type='text/css', href='/assets/css/responsive.css', rel='stylesheet')
         script(src='/assets/js/modernizr.min.js')
+        // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
+        // WARNING: Respond.js doesn't work if you view the page via file://
+        //if lt IE 9
         script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
         script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-
+        // Plugins
         script(src='/assets/js/jquery.min.js')
         script(src='/assets/js/bootstrap.min.js')
         script(type='text/javascript').
             var resizefunc = [];  
 
     block head
-
     body.widescreen.fixed-left-void
-        // <body class="widescreen fixed-left">
-        // Begin page
         #wrapper.forced
-            // <div id="wrapper" class="enlarged forced">
-            // // max-width 767px 또는 mobile device 일때 enlarged class 필요 //
             - if(session.group_flag =="in" && session.user_flag != null){
-            // Top Bar Start
             .topbar
-                // LOGO
                 .topbar-left
                     .text-center
                         a.logo(href='/')
                             span isu
                             img(src='/isu/images/ci_isu_white.png', alt='ISU')
-                // Navbar
                 .navbar.navbar-default(role='navigation')
                     .container
                         div
@@ -56,6 +51,10 @@ html
                                     a.waves-effect(href='/incident') 처리진행현황
                                 li
                                     a.waves-effect(href='/search/user_qna') 자주묻는질문과답
+                                //form.navbar-left.app-search.pull-left.hidden-xs(role='search')
+                                    input.form-control.app-search-input(type='text', placeholder='Search...')
+                                    a(href='')
+                                        i.fa.fa-search
                             ul.nav.navbar-nav.navbar-right.pull-right
                                 li.hidden-xs
                                     a.waves-effect.waves-light(href='/usermanage/myPage')
@@ -66,9 +65,6 @@ html
                                         i.md.md-settings-power
                                         |  로그아웃
             - } 
-
-
-
             .left.side-menu
                 .sidebar-inner.slimscrollleft
                     #sidebar-menu
@@ -83,7 +79,7 @@ html
                                     li
                                         a(href='/incident/new/문의하기')
                                             | 문의등록  
-
+                                            //i.fa.fa-circle-o.text-pink.m-l-5
                                     li
                                         a(href='/incident') 처리진행현황
                                     li
@@ -91,8 +87,44 @@ html
                                     li
                                         a(href='/search/user_list')
                                             | 처리된 내용검색 
-
-
+                                            //i.fa.fa-circle-o.text-pink.m-l-5
+                            //그룹관리자, 업무관리자,업무담당자 오픈
+                            - if(session.user_flag ==1 || session.user_flag ==3 || session.user_flag ==4 || session.user_flag ==5){ 
+                            li.has_sub
+                                a.waves-effect.waves-primary(href='javascript:void(0);')
+                                    i.md.md-person
+                                    span  SD 담당자 
+                                    span.menu-arrow
+                                ul.list-unstyled(style="display:block")
+                                    li
+                                        a(href='/incident/new_mng') 상담접수(전화)
+                                    li
+                                        a(href='/manager/work_list') 나의 업무처리현황
+                                    li
+                                        a(href='/myProcess/') 나의 업무지정
+                                    li
+                                        a(href='/manager/month_list') 월별 처리내역
+                            - }
+                            - if(session.user_flag !=9){
+                            li.has_sub
+                                a.waves-effect.waves-primary(href='javascript:void(0);')
+                                    i.md.md-search
+                                    span  SD 검색/통계 
+                                    span.menu-arrow
+                                ul.list-unstyled
+                                    li
+                                        a(href='/search/mng_list') 전체내용검색
+                                    li
+                                        a(href='/statistic/com_higher') 회사별 상위업무통계
+                                    li
+                                        a(href='/statistic/high_lower') 상위별 하위업무통계
+                                    li
+                                        a(href='/search/remain_list') 미해결 현황
+                                    li
+                                        a(href='/statistic/mng_month') 담당자별 월별 처리내역
+                                    li
+                                        a(href='/statistic/status_list') 처리구분별 처리내역
+                            - }
                             - if(session.user_flag ==1 || session.user_flag ==4){
                             li.has_sub
                                 a.waves-effect.waves-primary(href='javascript:void(0);')
@@ -107,9 +139,11 @@ html
                                     li
                                         a(href='/company/')
                                             | 회사정보관리(외부) 
+                                            //i.fa.fa-circle-o.text-pink.m-l-5
                                     li
                                         a(href='/usermanage/')
                                             | 사원정보관리(내외) 
+                                            //i.fa.fa-circle-o.text-pink.m-l-5
                                     li
                                         a(href='/usermanageAccess/')
                                             | 미승인 사원관리
@@ -117,6 +151,8 @@ html
                                         a(href='/companyProcess/') 회사별 상위업무지정
                                     li
                                         a(href='/processGubun/') 처리구분 코드조회
+                                    //li
+                                        a(href='gw_sub4_7.html') 업무별 담당자현황
                                     li
                                         a(href='/oftenqna/') 자주묻는 질문과답
                             - }
@@ -128,11 +164,10 @@ html
                             - }
                         .clearfix
                     .clearfix
-
             .clearfix
             block content
             block footer
 
-        script(src='/assets/js/jquery.core.js')
-        script(src='/assets/js/jquery.app.js')
-
+    // Custom main Js
+    script(src='/assets/js/jquery.core.js')
+    script(src='/assets/js/jquery.app.js')
