#KSY 관리자 메인 차트 수정

--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -74,7 +74,7 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label email
                                                         .col-sm-9
-                                                            input.form-control(name='usermanage[email]' type='text' value='#{usermanage.email}')
+                                                            input.form-control(name='usermanage[email]' type='text' value='#{usermanage.email}' readonly)
                                                     .form-group
                                                         label.col-sm-2.control-label 비밀번호
                                                         .col-sm-9
