--- a/app/views/layouts/default.jade
+++ b/app/views/layouts/default.jade
@@ -1,15 +1,25 @@
 //일반사용자
-- if(session.user_flag ==2 || session.user_flag ==3 || session.user_flag ==4 || session.user_flag ==9){ 
+- if(session.user_flag ==9){ 
     include ../layouts/user
 - }
 
-//팀장
+//고객사별 회사담당
 - if(session.user_flag ==5){ 
-    include ../layouts/deptadmin
+    include ../layouts/admin5
+- }
+
+//SD업무담당
+- if(session.user_flag ==4){ 
+    include ../layouts/admin4
+- }
+
+//팀장
+- if(session.user_flag ==3){ 
+    include ../layouts/admin3
 - }
 
 //전체관리자
 - if(session.user_flag ==1){
-    include ../layouts/admin
+    include ../layouts/admin1
 -}
 
