--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -125,12 +125,12 @@ block content
                                                                         option(value='3') 업무관리자(팀장)
                                                                         option(value='4') 업무담당자
                                                                         option(value='5') 고객사관리자
-                                                                        option(value='9') 일반사용자
+                                                                        option(value='9' selected) 일반사용자
                                                                     - }else{
                                                                         option(value='3') 업무관리자(팀장)
                                                                         option(value='4') 업무담당자
                                                                         option(value='5') 고객사관리자
-                                                                        option(value='9') 일반사용자
+                                                                        option(value='9' selected) 일반사용자
                                                                     - }
                                                         .form-group
                                                             label.col-sm-2.control-label 그룹사권한구분
