#LHI SD 등록 시 담당자에게 메신저 알림      model moment 추가      사용자관리 사번추가(이수시스템만 적용)

--- a/app/views/usermanage/new.jade
+++ b/app/views/usermanage/new.jade
@@ -70,6 +70,10 @@ block content
                                                             label.col-sm-2.control-label email
                                                             .col-sm-9
                                                                 input.form-control(name='usermanage[email]' type='email' placeholder='isusystem@isu.co.kr' required value='')
+                                                        .form-group(id='row_sabun', style='display:none')
+                                                            label.col-sm-2.control-label 사번
+                                                            .col-sm-9
+                                                                input.form-control(name='usermanage[sabun]' type='text' placeholder='이수시스템 직원은 반드시 등록요망' required value='')
                                                         .form-group
                                                             label.col-sm-2.control-label 비밀번호
                                                             .col-sm-9
