--- a/app/views/usermanage/edit.jade
+++ b/app/views/usermanage/edit.jade
@@ -75,6 +75,10 @@ block content
                                                         label.col-sm-2.control-label email
                                                         .col-sm-9
                                                             input.form-control(name='usermanage[email]' type='text' value='#{usermanage.email}' readonly)
+                                                    .form-group(id='row_sabun', style='display:none')
+                                                            label.col-sm-2.control-label 사번
+                                                            .col-sm-9
+                                                                input.form-control(name='usermanage[sabun]' type='text' placeholder='이수시스템 직원은 반드시 등록요망' required value='#{usermanage.sabun}')
                                                     .form-group
                                                         label.col-sm-2.control-label 비밀번호
                                                         .col-sm-9
