--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -173,7 +173,7 @@ block content
                                 .row
                                     .col-lg-6
                                         #_attach_box
-                                    .col-lg-6
+                                    //.col-lg-6
                                         #_attach_img_box
                                 // 접수내용
                                 #_receive_box
