--- a/app/views/main/admin.jade
+++ b/app/views/main/admin.jade
@@ -123,6 +123,6 @@ block content
                                             th.text-center(width='10%') 요청경로
                                             th.text-center(width='10%') 진행구분
                                             th.text-center(width='11%') 담당자
-                                            th.text-center(width='13%') 접수(완료)일
+                                            th.text-center(width='13%') 완료일
                                     tbody(id='more_list')
 block footer
