--- a/app/views/main/admin5.jade
+++ b/app/views/main/admin5.jade
@@ -1,7 +1,18 @@
 extends ../layouts/default
 
 block head
-    script(src='/isu/js/main/user.js')
+    //script(src='/assets/js/detect.js')
+    //script(src='/assets/js/fastclick.js')
+    //script(src='/assets/js/jquery.slimscroll.js')
+    //script(src='/assets/js/jquery.blockUI.js')
+
+    //script(src='/assets/js/waves.js')
+    //script(src='/assets/js/wow.min.js')
+    //script(src='/assets/js/jquery.nicescroll.js')
+    //script(src='/assets/js/jquery.scrollTo.min.js')
+    script(src='/isu/js/main/admin5.js')
+    script(src='/isu/js/statistic/chart_main.js')
+    
     script(src='/plugins/switchery/switchery.min.js')
     // skycons
     script(src='/plugins/skyicons/skycons.min.js', type='text/javascript')
@@ -11,6 +22,21 @@ block head
     // circliful Chart
     script(src='/plugins/jquery-circliful/js/jquery.circliful.min.js')
     script(src='/plugins/jquery-sparkline/jquery.sparkline.min.js')
+    //Page js
+    //chart_main.js 수정 후 삭제
+    //script(src='/assets/pages/jquery.dashboard.js')
+
+    script(type='text/javascript').
+    
+        jQuery(document).ready(function($) {
+            $('.counter').counterUp({
+                delay: 100,
+                time: 1200
+            });
+            //$('.circliful-chart').circliful();
+        });
+    
+    
 
 block content
     .content-page
@@ -47,31 +73,53 @@ block content
                             .circliful-chart#chart4(data-bgcolor='#ebeff2', data-dimension='90', data-fgcolor='#98a6ad', data-fontsize='14', data-percent='', data-text='', data-width='5')
                             h3#status4.text-inverse
                             p.text-muted.text-nowrap 처리완료
+                // end row
+                // start Chart
+                .row
+                    .col-lg-6
+                        .card-box
+                            h4.text-dark.header-title.m-t-0.m-b-30 만족도 현황
+                            .widget-chart.text-center
+                                #sparkline2
+                                br
+                                h5.text-muted  &nbsp;1 &nbsp;&nbsp;&nbsp;2 &nbsp;&nbsp;&nbsp;3 &nbsp;&nbsp;&nbsp;4 &nbsp;&nbsp;&nbsp;5 &nbsp;&nbsp;&nbsp;6 &nbsp;&nbsp;&nbsp;7 &nbsp;&nbsp;&nbsp;8 &nbsp;&nbsp;9 &nbsp;&nbsp;10 &nbsp;&nbsp;11 &nbsp;12
+                                h4.m-b-0 Month
+                                
+                                //ul.list-inline.m-t-15
+                                    li
+                                        h5.text-muted.m-t-20 1
+                                        h4.m-b-0 75%
+                                    li
+                                        h5.text-muted.m-t-20 응답율
+                                        h4.m-b-0 100%
+                                    li
+                                        h5.text-muted.m-t-20 만족율
+                                        h4.m-b-0 90%
+                    .col-lg-6
+                        .card-box
+                            h4.text-dark.header-title.m-t-0.m-b-30 월별 요청건 현황
+                            .widget-chart.text-center
+                                #sparkline1
+                                ul.list-inline.m-t-15
+                                    li
+                                        h5.text-muted.m-t-20#chartPreYear
+                                        h4.m-b-0#chartPreYearCnt
+                                    li
+                                        h5.text-muted.m-t-20#chartYear
+                                        h4.m-b-0#chartYearCnt
+                // end Chart
+                // start 접수현황
                 .row
                     .col-lg-12
                         .card-box
-                            h4.text-dark.header-title.m-t-0 미평가현황
+                            h4.text-dark.header-title.m-t-0 처리현황
                             .table-responsive
                                 table.table
                                     thead
                                         tr
+                                            th.text-center(width='6%') 긴급
                                             th.text-center 제목
-                                            th.text-center(width='13%') 등록일
-                                            th.text-center(width='10%') 요청경로
-                                            th.text-center(width='10%') 진행구분
-                                            th.text-center(width='11%') 담당자
-                                            th.text-center(width='13%') 완료일
-                                    tbody(id='more_list_nocomplete')
-                .row
-                    .col-lg-12
-                        .card-box
-                            h4.text-dark.header-title.m-t-0 요청처리현황
-                            .table-responsive
-                                table.table
-                                    thead
-                                        tr
-                                            th.text-center 제목
-                                            th.text-center(width='13%') 등록일
+                                            th.text-center(width='11%') 등록일
                                             th.text-center(width='10%') 요청경로
                                             th.text-center(width='10%') 진행구분
                                             th.text-center(width='11%') 담당자
