--- a/app/views/layouts/deptadmin.jade
+++ b/app/views/layouts/deptadmin.jade
@@ -76,8 +76,10 @@ html
                                             | 문의등록  
                                     li
                                         a(href='/incident') 처리진행현황
+                                    - if(session.group_flag =="in") {
                                     li
                                         a(href='/search/user_qna') 자주묻는 질문과답
+                                    - }
                                     li
                                         a(href='/search/user_list')
                                             | 처리된 내용검색 
