--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -147,7 +147,7 @@ block content
                                         //th(class='text-center' width='8%') 담당자
                                         //th(class='text-center' width='14%') 접수(완료일)
                                 tbody(id='more_list')
-                                iframe#txtArea1(style='display:none')
+                                //iframe#txtArea1(style='display:none')
                         .row
                             .col-sm-4
                                 .dataTables_info.pull Showing 1 to 15 of 
