--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -1,61 +1,36 @@
 extends ../layouts/default
 block head
-    title  1-2 처리진행현황 목록
     // summernot
     link(href='/plugins/summernote/dist/summernote.css', rel='stylesheet')
-
-    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/bootstrap.min.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/core.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/icons.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/components.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/pages.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/menu_light.css', rel='stylesheet')
-    link(type='text/css', href='/assets/css/responsive.css', rel='stylesheet')
-
-    //첨부파일
-    link(type='text/css', href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet')
-
-    script(src='/assets/js/modernizr.min.js')
-    // HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries
-    // WARNING: Respond.js doesn't work if you view the page via file://
-    //if lt IE 9
-    script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
-    script(src='https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js')
-
-    // jQuery
-    //script(src='/assets/js/jquery.min.js')
-    //script(src='/assets/js/bootstrap.min.js')
-    script(src='/assets/js/detect.js')
-    script(src='/assets/js/fastclick.js')
-    script(src='/assets/js/jquery.slimscroll.js')
-    script(src='/assets/js/jquery.blockUI.js')
-    script(src='/assets/js/waves.js')
-    script(src='/assets/js/wow.min.js')
-    script(src='/assets/js/jquery.nicescroll.js')
-    script(src='/assets/js/jquery.scrollTo.min.js')
-    script(src='/plugins/switchery/switchery.min.js')
-    script(src='/plugins/bootstrap-tagsinput/dist/bootstrap-tagsinput.min.js')
-    script(src='/plugins/multiselect/js/jquery.multi-select.js', type='text/javascript')
-    script(src='/plugins/jquery-quicksearch/jquery.quicksearch.js', type='text/javascript')
-    script(src='/plugins/select2/select2.min.js', type='text/javascript')
-    script(src='/plugins/bootstrap-touchspin/dist/jquery.bootstrap-touchspin.min.js', type='text/javascript')
-    script(src='/plugins/bootstrap-inputmask/bootstrap-inputmask.min.js', type='text/javascript')
-    script(src='/plugins/moment/moment.js')
-    script(src='/plugins/timepicker/bootstrap-timepicker.min.js')
-    script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
-    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
-    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     // form summernote
     script(src='/plugins/summernote/dist/summernote.min.js')
 
     //첨부파일
     script(src='/vendor/fileupload/js/fileinput.js', type='text/javascript')
+    link(href='/vendor/fileupload/css/fileinput.css', media='all', rel='stylesheet', type='text/css')
 
-    script(src='/isu/js/incident/index.js', type='text/javascript')
+    link(href='/plugins/switchery/switchery.min.css', rel='stylesheet')
+    link(href='/assets/css/bootstrap.min.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/core.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/icons.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/components.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/pages.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/menu_light.css', rel='stylesheet', type='text/css')
+    link(href='/assets/css/responsive.css', rel='stylesheet', type='text/css')
+
+    script(src='/assets/js/modernizr.min.js')
+
+    script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
+    script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
     
-     // 더보기
+    script(src='/isu/js/incident/index.js', type='text/javascript')
+
+    // 더보기
     script(src='/plugins/dotdotdot/jquery.dotdotdot.min.js')
+    
+    
+
+
 
 block content
     // ==============================================================
