#LHI new_mng.jade 상위업무 저장 오류처리

--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -179,8 +179,8 @@ block content
                                         a(href='#') Home
                                     li
                                         a(href='#') 문의 및 담당자
-                                    li.active 처리된 내용검색
-                                h4.page-title 처리된 내용검색
+                                    li.active 내용보기
+                                h4.page-title 내용보기
                     .row
                         .col-lg-12
                             .btn-toolbar.m-t-10(role='toolbar')
