--- a/app/views/layouts/admin1.jade
+++ b/app/views/layouts/admin1.jade
@@ -133,7 +133,7 @@ html
                                         a(href='/lowerProcess/') 하위업무조회
                                     li
                                         a(href='/company/')
-                                            | 회사정보관리(외부) 
+                                            | 회사정보관리(내외) 
                                             //i.fa.fa-circle-o.text-pink.m-l-5
                                     li
                                         a(href='/usermanage/')
