--- a/app/views/company/new.jade
+++ b/app/views/company/new.jade
@@ -11,6 +11,8 @@ block head
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/isu/js/search/datepicker.js', type='text/javascript')
 
+    script(src='/isu/js/company/new.js')
+
 block content
     .content-page
         .content
@@ -40,29 +42,36 @@ block content
                                                 i.fa.fa-send-o
                                                 |  저장
                                     hr
+                                    .form-group(id='row_group_flag', style='display:none')
+                                        label.col-sm-3.control-label 그룹사여부
+                                        .col-sm-4
+                                            input#user_flag.form-control(type='hidden', readonly value='#{session.user_flag}', placeholder='')
+                                            select.form-control(name='company[group_flag]' type='text')
+                                                option(value='out' selected) 외부고객사
+                                                option(value='in') 그룹사
                                     .form-group
                                         label.col-sm-3.control-label 회사코드
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[company_cd]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 회사명
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[company_nm]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 업태
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[type]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 대표이사명
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[ceo_nm]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 전화번호
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[tel_no]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 팩스번호
-                                        .col-sm-3
+                                        .col-sm-4
                                             input.form-control(type='text', name='company[fax_no]', placeholder='')
                                     .form-group
                                         label.col-sm-3.control-label 회사주소1
