--- a/app/views/layouts/admin3.jade
+++ b/app/views/layouts/admin3.jade
@@ -48,8 +48,10 @@ html
                                     a.waves-effect(href='/incident/new/문의하기') 문의하기
                                 li
                                     a.waves-effect(href='/incident') 처리진행현황
+                                - if(session.group_flag =="in") {
                                 li
                                     a.waves-effect(href='/search/user_qna') 자주묻는질문과답
+                                - }
                                 //form.navbar-left.app-search.pull-left.hidden-xs(role='search')
                                     input.form-control.app-search-input(type='text', placeholder='Search...')
                                     a(href='')
