--- a/app/views/main/admin4.jade
+++ b/app/views/main/admin4.jade
@@ -100,10 +100,10 @@ block content
                                 #sparkline1
                                 ul.list-inline.m-t-15
                                     li
-                                        h5.text-muted.m-t-20#chartPreYear
+                                        h5.text-primary.m-t-20#chartPreYear
                                         h4.m-b-0#chartPreYearCnt
                                     li
-                                        h5.text-muted.m-t-20#chartYear
+                                        h5.text-success.m-t-20#chartYear
                                         h4.m-b-0#chartYearCnt
                 // end Chart
                 // start 접수현황
