--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -139,7 +139,7 @@ html
                                         .col-sm-8
                                             input.form-control(id='userCompany_nm' name='usermanage[userCompany_nm]' type='text' required value='')
                                             input.form-control(id='company_cd' name='usermanage[company_cd]' type='hidden' value='')
-                                            input.form-control(id='access_yn' name='usermanage[access_yn]' type='hidden' value='N')
+                                            //input.form-control(id='access_yn' name='usermanage[access_yn]' type='hidden' value='N')
                                     .form-group
                                         label.col-sm-3.control-label Email (ID)
                                         .col-sm-8
