--- a/app/views/usermanageAccess/edit.jade
+++ b/app/views/usermanageAccess/edit.jade
@@ -76,7 +76,7 @@ block content
                                                     .form-group
                                                         label.col-sm-2.control-label 비밀번호
                                                         .col-sm-9
-                                                            input.form-control(name='usermanageAccess[password]' type='password' value='#{usermanageAccess.password}')
+                                                            input.form-control(name='usermanageAccess[password]' type='password' value='')
                                                     .form-group
                                                         label.col-sm-2.control-label 사원명
                                                         .col-sm-9
