--- a/app/views/incident/index.jade
+++ b/app/views/incident/index.jade
@@ -42,6 +42,7 @@ block head
     script(src='/plugins/mjolnic-bootstrap-colorpicker/dist/js/bootstrap-colorpicker.min.js')
     script(src='/plugins/bootstrap-datepicker/dist/js/bootstrap-datepicker.min.js')
     script(src='/plugins/bootstrap-daterangepicker/daterangepicker.js')
+    script(src='/plugins/dotdotdot/jquery.dotdotdot.min.js')
 
     script(src='/isu/js/incident/index.js', type='text/javascript')
 
