#LHI ProcessGubun 수정

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -464,6 +464,7 @@ block content
                                         label.col-sm-2.control-label 처리내용
                                         .col-sm-10
                                             textarea.form-control(name='incident[complete_content]', rows='8')
+                                                | 처리되었습니다.
                                     hr
                                     .form-group
                                         label.col-sm-2.control-label 공개여부
