--- a/app/views/processGubun/index.jade
+++ b/app/views/processGubun/index.jade
@@ -41,9 +41,9 @@ block content
                                     tr
                                         //th(width='15%') 상위업무
                                         th.text-center(width='30%') 처리구분명
+                                        th.text-center(width='10%') 유형
                                         th.text-center 설명
                                         th.text-center(width='10%') 등록자
-                                        th.text-center(width='10%') 등록일
                                         th.text-center(width='10%') 사용
                                 tbody(id='more_list')
                         .row
