--- a/app/views/usermanageAccess/edit.jade
+++ b/app/views/usermanageAccess/edit.jade
@@ -123,17 +123,14 @@ block content
                                                         label.col-sm-2.control-label 사용자권한구분
                                                         .col-sm-9
                                                             select.form-control(id='user_flag' name='usermanageAccess[user_flag]' type='text' value='#{usermanageAccess.user_flag}')
-                                                                option(value='1') 그룹관리자 
-                                                                option(value='2') 회사관리자
-                                                                option(value='3') 업무관리자
-                                                                option(value='4') 업무담당자
+                                                                option(value='5') 고객사관리자
                                                                 option(value='9') 일반사용자
                                                     .form-group
                                                         label.col-sm-2.control-label 그룹사권한구분
                                                         .col-sm-9
                                                             select.form-control(id='group_flag' name='usermanageAccess[group_flag]' type='text' value='#{usermanageAccess.group_flag}')
-                                                                option(value='out') 외부사용자 
-                                                                option(value='in') 내부사용자
+                                                                option(value='out' selected) 외부사용자 
+                                                                //option(value='in') 내부사용자
                                                     .form-group
                                                         label.col-sm-2.control-label 승인여부
                                                         .col-sm-9
