#KSY 사원관리 사용여부, 메일발송 추가

--- a/app/views/usermanage/index.jade
+++ b/app/views/usermanage/index.jade
@@ -62,11 +62,13 @@ block content
                                 thead
                                     tr
                                         th.text-center 회사명
-                                        th.text-center(width='25%') email
-                                        th.text-center(width='10%') 사원명
-                                        th.text-center(width='18%') 부서명
+                                        th.text-center email
+                                        th.text-center 사원명
+                                        th.text-center 부서명
                                         th.text-center(width='6%') 직위
                                         th.text-center(width='14%') 연락처
+                                        th.text-center(width='6%') 사용여부
+                                        th.text-center(width='6%') 메일발송
                                 tbody(id='more_list')
                         .row
                             .col-sm-4
