#LHI 전체내용검색(mng_list) 접수내용 화면표시 수정

--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -236,9 +236,7 @@ block content
 
                                     tr
                                         th.bg-muted 접수상담내용
-                                        td(colspan='3')
-                                            | 접수하였습니다.
-                                            br
+                                        td(colspan='3')#_receipt_content
                         .col-sm-12.m-t-20
                             .card-box
                                 h4
