--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -78,15 +78,15 @@ block content
                         .card-box
                             form.form-horizontal.group-border-dashed(action='#', onsubmit='return false;')
                                 .form-group
-                                    label.col-sm-2.control-label 상위업무 
+                                    label.col-sm-2.control-label 회사명
+                                    .col-sm-4
+                                        select#company_cd.form-control
+                                .form-group
+                                    label.col-sm-2.control-label 상위업무
                                     .col-sm-3
                                         select.form-control(id='higher_cd' name='higher_cd')
                                             option(value ='*') 전체
-                                            - if (higherprocess.length > 0) {
-                                                - for( var i = 0 ; length = higherprocess.length > i ; i++ ){ //속도가 느리다고 알고 있음.
-                                                    option(value ='#{higherprocess[i].higher_cd}') #{higherprocess[i].higher_nm}
-                                                - }
-                                            - } 
+                                    
                                     label.col-sm-2.control-label 하위업무
                                     .col-sm-4
                                         select.form-control(id='lower_cd' name='lower_cd')
