--- a/app/views/search/mng_list.jade
+++ b/app/views/search/mng_list.jade
@@ -113,6 +113,8 @@ block content
                                             option(value='title,content') 제목+내용
                                             option(value='title') 제목
                                             option(value='content') 내용
+                                            option(value='request') 요청자
+                                            option(value='manager') 담당자
                                     .col-sm-6
                                         input.form-control(id='searchText' name='searchText' type='text' value=searchText)
                                     .col-sm-2
