--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -110,6 +110,8 @@ block content
                                             option(value='title,content') 제목+내용
                                             option(value='title') 제목
                                             option(value='content') 내용
+                                            option(value='request') 요청자
+                                            option(value='manager') 담당자
                                     .col-sm-6
                                         input.form-control(type='text' id='searchText' name='searchText' value=searchText)
                                     .col-sm-2
