#PSW 나의업무처리현황 조건 추가

--- a/app/views/manager/work_list.jade
+++ b/app/views/manager/work_list.jade
@@ -71,6 +71,10 @@ block content
                         .card-box.m-t-10
                             form.form-horizontal.group-border-dashed(action='#')
                                 .form-group
+                                    label.col-sm-2.control-label 회사명
+                                    .col-sm-4
+                                        select#company_cd.form-control
+                                .form-group
                                     label.col-sm-2.control-label 진행상태
                                     .col-sm-2
                                         select.form-control(id='status_cd' name='status_cd')
