#PSW -api 추가      -통계화면 수정중

--- a/app/views/statistic/high_lower.jade
+++ b/app/views/statistic/high_lower.jade
@@ -8,13 +8,11 @@ block head
     script(src='/vendor/jquery/jquery-ui.1.11.0.js')
     script(src='/vendor/jquery/jquery.min.js')
 
+    //script(src='https://cdn.datatables.net/plug-ins/1.10.16/api/average().js')
+
 
     script(src='/isu/js/statistic/jquery.rowspanizer.js', type='text/javascript')
-    
-    script(src='https://cdn.datatables.net/plug-ins/1.10.16/api/average().js')
     script(src='/isu/js/statistic/high_lower.js', type='text/javascript')
-s
-
 
 
 
@@ -86,7 +84,7 @@ block content
                                         th.font-12(class='text-center' width='10%') 미해결건수
                                         th.font-12(class='text-center' width='10%') 해결률(%)
                                         th.font-12(class='text-center' width='10%' ) 평점
-                                tbody#more_list
+                                tbody#more_list(class='target-table')
                                     
 
 block footer
